--- a/package.json
+++ b/package.json
@@ -27,31 +27,31 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "^7.3.4",
+    "@angular/cli": "^11.2.5",
     "@angular/compiler-cli": "^7.2.7",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
+    "extend": ">=3.0.2",
+    "hoek": ">=4.2.1",
+    "https-proxy-agent": ">=2.2.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "^4.0.1",
+    "karma": "^6.2.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "lodash": ">=4.17.11",
     "protractor": "^5.4.2",
+    "randomatic": ">=3.0.0",
+    "ssri": ">=5.2.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "~2.4.2",
-    "lodash": ">=4.17.11",
-    "extend": ">=3.0.2",
-    "webpack-dev-server": ">=3.1.11",
-    "randomatic": ">=3.0.0",
-    "https-proxy-agent": ">=2.2.0",
-    "hoek": ">=4.2.1",
-    "ssri": ">=5.2.2"
+    "webpack-dev-server": ">=3.1.11"
   }
 }
